# foocatsakiga38

./: CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: foocatsakiga38.rst  modules.rst
tests/: test_foocatsakiga38.py
